[package]
name = "timezonebot"
version = "0.2.0"
edition = "2018"
authors = ["Nogamara <armagonlive@gmail.com>"]

[lib]
name = "tzbot"
path = "src/tzbot.rs"

[[bin]]
name = "timezonebot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hourglass = "0.8.0"
regex = "1.5.6"
time = "0.1"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
